--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,5 +1,7 @@
 * {
     font-family: "Hack", monospace;
+    font-size: 12pt;
+    font-weight: 900;
 }
 
 window {
@@ -7,26 +9,32 @@ window {
 }
 
 #input {
+    all: unset;
     margin: 5px;
-    border-radius: 0px;
-    border: none;
-    background-color: #3B4252;
+    font-size: 14pt;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: rgba(50, 50, 50, 0.5); 
     color: white;
 }
 
 #inner-box {
-    background-color: #383C4A;
+    background-color: transparent;
+    border-radius: 5px;
 }
 
 #outer-box {
     margin: 2px;
     padding: 10px;
-    background-color: #383C4A;
+    background-color: rgba(50, 50, 50, 0.2);
     border-radius: 5px;
+    border: rgba(153, 153, 153, .85) 3px solid;
 }
 
 #scroll {
     margin: 5px;
+    border-radius: 5px;
+    /* background-color: rgba(50, 50, 50, 0.5); */
 }
 
 #text {
@@ -34,12 +42,23 @@ window {
     color: white;
 }
 
-#entry:nth-child(even){
-    background-color: #404552;
+#entry {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
 }
 
+/* #entry:nth-child(even){
+    background-color: (50, 50, 50, 0.5);
+} */
+
 #entry:selected {
-    background-color: #4C566A;
+    all: unset;
+    padding: 10px;
+    margin: 10px;
+    background-color: rgba(150, 150, 150, 0.5);
+    border-radius: 5px;
+    background-color: (50, 50, 50, 0.5);
 }
 
 #text:selected {
