--- a/waybar/style.css
+++ b/waybar/style.css
@@ -39,7 +39,7 @@ window#waybar.hidden {
   /* padding: 1px; */
   color: #7984a4;
   background-color: transparent;
-  padding: 0px 0px 3px 0px;
+  padding: 0px 2px 3px 2px;
   /* Use box-shadow instead of border so the text isn't offset */
   /* box-shadow: inset 0 -3px transparent; */
   /* Avoid rounded borders under each workspace name */
@@ -47,15 +47,8 @@ window#waybar.hidden {
   /* border-radius: 32px; */
 }
 
-#workspaces button.focused {
-  /* background-color: transparent; */
-}
-#workspace button.hover {
-  /* background-color: transparent; */
-  color: #fff;
-}
 #workspaces button.active {
-  color: #fff;
+  color: #ffffff;
 }
 
 #workspaces button.urgent {
