--- a/wofi/style.css
+++ b/wofi/style.css
@@ -14,7 +14,7 @@ window {
     font-size: 14pt;
     padding: 15px;
     border-radius: 5px;
-    background-color: rgba(30, 30, 30, 0.5); 
+    background-color: rgba(10, 10, 10, 0.5); 
     color: white;
 }
 
@@ -26,15 +26,15 @@ window {
 #outer-box {
     margin: 2px;
     padding: 10px;
-    background-color: rgba(50, 50, 50, 0.7);
+    background-color: rgba(20, 20, 20, 1);
     border-radius: 5px;
-    border: rgba(153, 153, 153, .85) 3px solid;
+    border: rgba(51, 51, 51, 1) 1px solid;
 }
 
 #scroll {
     margin: 5px;
     border-radius: 5px;
-    background-color: rgba(30, 30, 30, 0.5);
+    background-color: rgba(10, 10, 10, 0.5);
 }
 
 #text {
@@ -53,7 +53,7 @@ window {
     padding: 10px;
     margin: 0px;
     border-radius: 5px;
-    background-color: rgba(30, 30, 30, 0.5);
+    background-color: rgba(10, 10, 10, 0.5);
 }
 
 #text:selected {
