--- a/waybar/style.css
+++ b/waybar/style.css
@@ -131,7 +131,7 @@ window#waybar.hidden {
 }
 
 #custom-power {
-  background-color: #1b242b;
+  background-color: #8CAAEE;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
