--- a/wofi/style.css
+++ b/wofi/style.css
@@ -13,31 +13,41 @@ window {
     margin: 5px;
     padding: 10px;
     border-radius: 5px;
+    color: rgba(245, 194, 231, 1);
 }
 
 #outer-box {
     padding: 10px;
     border-radius: 5px;
-    border: rgba(51, 51, 51, 1) 1px solid;
+    border: rgba(137, 180, 250, .9) 1px solid;
+}
+
+#input > image.left {
+  color: rgba(245, 194, 231, 1);
+}
+
+#input > image.right {
+  color: rgba(245, 194, 231, 1);
 }
 
 #scroll {
     margin: 5px;
 }
 
-/* #text {
-    padding: 4px;
-} */
-/* #entry {
+/* #text { */
+/*     padding: 4px; */
+/* } */
+
+#entry {
     color: white;
-} */
+}
 
 #entry:selected {
     outline: none;
-    background-color: rgba(10, 10, 10, 0.5);
+    background-color: rgba(10, 10, 10, 0);
 }
 
 #text:selected {
     background: transparent;
-    color: rgba(131, 171, 198, 1);
+    color: rgba(137, 180, 250, 1);
 }
