added neovim themes

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -48,8 +48,8 @@ window#waybar.hidden {
 }
 
 #workspaces button.active {
-  color: #ffffff;
-  background-color: #ffffff;
+  color:#89B4FA;
+  background-color: #89B4FA;
 }
 
 #workspaces button.urgent {
